# ecovoyage

./: .buildinfo  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.html  README.md  _config.yml  activate_script.sh  check_dags.py  config.env  docker-bake.template.hcl  docker-compose.yml  environment.yaml  genindex.html  objects.inv  overthink.yml  pixi.toml  pyproject.toml  run_ecovoyage_tasks.sh  search.html  searchindex.js  setup.py  test_dag_parse.py
.claude/: settings.json
.devcontainer/: Containerfile  devcontainer.json
.r10/: hardfail-corpus-graph.json  hardfail-corpus.json
airflow/: .gitignore  airflow.cfg  simple_auth_manager_passwords.json.generated
airflow/dags/: ecovoyage_dag.py
env/: env_core.yaml  env_jupyter.yaml  env_testing.yaml
notebooks/: gpu-libraries-demo.py  gtfs-austria.py  gtfs-graph.py  osm-austria.py  osm-monaco-viz.py
parts/ai/: from_paris_to_vienna.html  habsburg_hysteria.html  naughty_bots_beware.html  the_adventures_of_sir_fact-a-lot.html  the_art_of_inquerey.html  the_mystery_of _haus_ oesterreich.html  watts_the_cost.html
parts/devops/: geonode_meets_docker.html  github_cloudflare_love.html
parts/issues/: lost_in_stickerland.html
parts/jupyter/: github_page_ebp.html  notebooks_go_lite.html
parts/notebooks/: altair_showcase.html  altair_test.html
parts/python/: face_it.html
src/ecovoyage/: README.md  __init__.py  dag.py  main.py
src/ecovoyage/tests/: __init__.py  test_basic.py  test_dag.py
